[gd_scene load_steps=9 format=3 uid="uid://cctuy6spgqs3b"]

[ext_resource type="Script" path="res://src/Environment/Interactive/windows.gd" id="1_o2hos"]
[ext_resource type="Texture2D" uid="uid://cf4vcff8w4us5" path="res://Assets/Objects/Doors_Windows/Window3.png" id="2_u4ob0"]
[ext_resource type="Texture2D" uid="uid://d00bincjt4kj1" path="res://Assets/Objects/Doors_Windows/Window2.png" id="3_wgr1q"]
[ext_resource type="Texture2D" uid="uid://py4o6nwk20h0" path="res://Assets/Objects/Doors_Windows/Window1.png" id="4_fvxcy"]
[ext_resource type="AudioStream" uid="uid://cf2lpl6vww4bj" path="res://Assets/SFX/window_close.wav" id="5_nbxdf"]
[ext_resource type="Script" path="res://src/addons/game_state_helper/game_state_helper.gd" id="6_lcns3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wln2i"]
size = Vector2(96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_eiycq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_u4ob0")
}, {
"duration": 1.0,
"texture": ExtResource("3_wgr1q")
}, {
"duration": 1.0,
"texture": ExtResource("4_fvxcy")
}],
"loop": false,
"name": &"Close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fvxcy")
}, {
"duration": 1.0,
"texture": ExtResource("3_wgr1q")
}, {
"duration": 1.0,
"texture": ExtResource("2_u4ob0")
}],
"loop": false,
"name": &"Open",
"speed": 5.0
}]

[node name="Window1" type="Area2D"]
position = Vector2(176, 549)
script = ExtResource("1_o2hos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_wln2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
sprite_frames = SubResource("SpriteFrames_eiycq")
animation = &"Close"
autoplay = "Open"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -29)
stream = ExtResource("5_nbxdf")
volume_db = -9.8

[node name="TimerOpenW1" type="Timer" parent="."]
one_shot = true

[node name="TimerClosedW1" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="GameStateHelper" type="Node" parent="."]
script = ExtResource("6_lcns3")
dynamic_instance = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
